<resources>
    <string name="app_name">Lugares_j</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Universo Cósmico</string>
    <string name="nav_header_subtitle">universocosmico@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_libro">Libros</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="msg.nombre">Nombre del libro</string>
    <string name="msg.correo">Email (libro@xxxx.xxx)</string>
    <string name="msg.telefono">Telefono (9999-9999)</string>
    <string name="msg.categoria">Categoria </string>
    <string name="msg.web">Sitio Web</string>
    <string name="bt_add_libro">Agregar Libro</string>
    <string name="msg_libro_added">Libro agregado</string>
    <string name="msg_data">Faltan datos</string>
    <string name="bt_update_libro">Actualizar Libro</string>
    <string name="msg_libro_updated">Libro actualizado</string>
    <string name="bt_delete_libro">Eliminar Libro</string>
    <string name="msg_libro_deleted">Libro eliminado</string>
    <string name="msg_pregunta_delete">¿Esta seguro de eliminar el libro </string>
    <string name="msg_si">Si</string>
    <string name="msg_no">No</string>

    <string name="msg_enviar_correo">Enviar correo electrónico</string>
    <string name="msg_phone_call">Realizar llamada telefónica</string>
    <string name="msg_whatsapp_send">Enviar mensaje WhatsApp</string>
    <string name="msg_web_view">Abrir sitio Web</string>
    <string name="msg_map_view">Ver lugar en mapa</string>
    <string name="tv_latitud_lb">Latitud</string>
    <string name="tv_longitud_lb">Longitud</string>
    <string name="tv_altura_lb">Altura</string>
    <string name="msg_saludos">Saludos amigos</string>
    <string name="msg_mensaje_correo">Le escribo este correo para</string>
    <string name="error">Error</string>

    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="msg_imagen">Imagen del libro</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="take_photo">Toma foto</string>
    <string name="rotate_l">Rota izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
    <string name="todo">Luego</string>
    <string name="msg_subiendo_lugar">Subiendo el Libro</string>

</resources>