<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    tools:context=".ui.libro.UpdateLibroFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg.nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg.correo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg.telefono"
        android:inputType="phone" />

        <TextView
            android:id="@+id/etCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Categoria"
            tools:hint="@string/msg.categoria" />

        <Button
        android:id="@+id/btUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_update_libro" />

    <Button
        android:id="@+id/btDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete_libro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_latitud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_longitud"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_altura"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:contentDescription="@string/msg_imagen"
            android:scaleType="centerInside"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/actualizar" />

    </LinearLayout>
</ScrollView>